# serializer version: 1
# name: test_context[all_nodes]
  list([
    'input1.mp4',
    'tmp.mp4',
    'reverse',
    'trim',
    'concat',
  ])
# ---
# name: test_context[all_streams]
  list([
    'input1.mp4:None',
    'reverse:0',
    'trim:0',
    'concat:0',
  ])
# ---
# name: test_context[node_labels]
  dict({
    'concat': 's2',
    'input1.mp4': '0',
    'reverse': 's0',
    'tmp.mp4': 'out',
    'trim': 's1',
  })
# ---
# name: test_context[outgoing_nodes]
  dict({
    'concat:0': list([
      list([
        'tmp.mp4',
        0,
      ]),
    ]),
    'input1.mp4:None': list([
      list([
        'reverse',
        0,
      ]),
    ]),
    'reverse:0': list([
      list([
        'trim',
        0,
      ]),
    ]),
    'trim:0': list([
      list([
        'concat',
        0,
      ]),
      list([
        'concat',
        1,
      ]),
    ]),
  })
# ---
# name: test_context[outgoing_streams]
  dict({
    'concat': list([
      'concat:0',
    ]),
    'input1.mp4': list([
      'input1.mp4:None',
    ]),
    'reverse': list([
      'reverse:0',
    ]),
    'trim': list([
      'trim:0',
    ]),
  })
# ---
